@@ -1,3 +1,6 @@
+2012-03-01
+* revive knowledgebase idea, but now as a pretty printer
+
 2012-02-28
 * make pretty printer configurable
 
